arreglando sonar
Co-authored-by: Diegoc04 <diego.fercho.castellanos@gmail.com>