@@ -1,6 +1,4 @@
-// BlackJackSocketIOConfig.java
 package com.escuelagaing.edu.co;
-
 import com.corundumstudio.socketio.SocketIOClient;
 import com.corundumstudio.socketio.SocketIOServer;
 import com.corundumstudio.socketio.listener.ConnectListener;
@@ -12,19 +10,23 @@ import com.escuelagaing.edu.co.service.RoomService;
 import com.escuelagaing.edu.co.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 @Component
 public class BlackJackSocketIOConfig {
+    private static final Logger logger = LoggerFactory.getLogger(BlackJackSocketIOConfig.class);
+    private static final String SALA_PREFIX = "Sala ";
+    private static final String ERROR_PREFIX = "error";
+    private static final String BETERROR_PREFIX = "betError";
     private final SocketIOServer server;
     private final UserService userService;
     private final RoomService roomService;
-    private final Map<String, Room> rooms = new ConcurrentHashMap<>();
+    private final Map<String, Room> rooms = new HashMap<>();
     private final Map<String, String> socketToPlayerId = new HashMap<>();
     private final Map<String, String> socketToRoomId = new HashMap<>();
 
@@ -50,7 +52,7 @@ public class BlackJackSocketIOConfig {
             String playerId = client.getHandshakeData().getSingleUrlParam("id");
     
             if (playerId == null || playerId.isEmpty()) {
-                System.out.println("[ERROR] Conexión rechazada: Player ID no proporcionado.");
+                logger.error("Conexión rechazada: Player ID no proporcionado.");
                 client.disconnect();
                 return;
             }
@@ -58,12 +60,12 @@ public class BlackJackSocketIOConfig {
             // Si ya existe una conexión para este jugador, desconectar la anterior
             socketToPlayerId.values().removeIf(existingPlayerId -> existingPlayerId.equals(playerId));
     
-            System.out.println("Player connected! Player ID: " + playerId);
+            logger.info("Player connected! Player ID: {}", playerId);
             socketToPlayerId.put(client.getSessionId().toString(), playerId);
     
             // Inicializar salas si no están cargadas
             if (rooms.isEmpty()) {
-                System.out.println("[INFO] Inicializando salas desde RoomService en la conexión.");
+                logger.info("Inicializando salas desde RoomService en la conexión.");
                 initializeRooms();
             }
     
@@ -79,23 +81,20 @@ private void initializeRooms() {
         for (Room room : initialRooms) {
             rooms.put(room.getRoomId(), room);
         }
-        System.out.println("[INFO] Salas inicializadas desde RoomService: " + rooms.keySet());
+        logger.info("Salas inicializadas desde RoomService: {}", rooms.keySet());
     } else {
-        System.out.println("[INFO] No hay salas disponibles para inicializar.");
+        logger.info("No hay salas disponibles para inicializar.");
     }
 }
 
 private void sendRoomsUpdateToClient(SocketIOClient client) {
     List<RoomStateDTO> allRoomsState = rooms.values().stream()
-            .map(Room::buildRoomState)
-            .collect(Collectors.toList());
+        .map(Room::buildRoomState)
+        .toList(); // Cambiado a toList()
 
     client.sendEvent("roomsUpdate", allRoomsState);
-    System.out.println("Salas enviadas al cliente zzzzzzz: " + allRoomsState);
+    logger.info("Salas enviadas al cliente: {}", allRoomsState);
 }
-
-    
-
 
 private DisconnectListener onDisconnected() {
     return client -> {
@@ -104,46 +103,76 @@ private DisconnectListener onDisconnected() {
         String roomId = socketToRoomId.remove(sessionId);
 
         if (playerId == null || roomId == null) {
-            System.out.println("[ERROR] No se encontró información para el session ID: " + sessionId);
+            logMissingSessionInfo(sessionId);
             return;
         }
 
         Room room = rooms.get(roomId);
-        if (room != null) {
-            Player player = room.getPlayerById(playerId);
-
-            if (player != null) {
-                player.setDisconnected(true);
-                System.out.println("Player " + player.getId() + " marked as disconnected.");
-
-                if (room.getStatus() != RoomStatus.EN_JUEGO) {
-                    System.out.println("Eliminando jugador desconectado durante la fase " + room.getStatus() + ": " + playerId);
-                    room.removePlayer(player);
-
-                } else {
-                    // Si está en juego
-                    if (player.getInTurn()) {
-                        System.out.println("Player was in turn. Passing to next player.");
-                        player.setInTurn(false);
-                        room.getGame().nextPlayer();
-                    } 
-                }
-
-                // Si después de eliminar, la sala queda vacía
-                if (room.getPlayers().isEmpty()) {
-                    room.resetRoom();
-                    System.out.println("Sala " + roomId + " reiniciada y puesta en estado EN_ESPERA.");
-                }
-
-                sendRoomUpdate(roomId);
-            } else {
-                System.err.println("[ERROR] Jugador no encontrado en la sala. Player ID: " + playerId);
-            }
-        } else {
-            System.err.println("[ERROR] Sala no encontrada para Room ID: " + roomId);
+        if (room == null) {
+            logMissingRoomInfo(roomId);
+            return;
         }
+
+        handlePlayerDisconnection(room, playerId, roomId);
     };
 }
+
+private void logMissingSessionInfo(String sessionId) {
+    logger.error("No se encontró información para el session ID: {}", sessionId);
+}
+
+private void logMissingRoomInfo(String roomId) {
+    logger.error("Sala no encontrada para Room ID: {}", roomId);
+}
+
+private void handlePlayerDisconnection(Room room, String playerId, String roomId) {
+    Player player = room.getPlayerById(playerId);
+    if (player == null) {
+        logger.error("Jugador no encontrado en la sala. Player ID: {}", playerId);
+        return;
+    }
+
+    markPlayerAsDisconnected(player);
+    handleRoomLogic(room, player, roomId);
+}
+
+private void markPlayerAsDisconnected(Player player) {
+    player.setDisconnected(true);
+    logger.info("Player {} marked as disconnected.", player.getId());
+}
+
+private void handleRoomLogic(Room room, Player player, String roomId) {
+    if (room.getStatus() != RoomStatus.EN_JUEGO) {
+        removePlayerFromRoom(room, player);
+    } else {
+        handleInGameLogic(room, player);
+    }
+
+    if (room.getPlayers().isEmpty()) {
+        resetRoom(room, roomId);
+    }
+
+    sendRoomUpdate(roomId);
+}
+
+private void removePlayerFromRoom(Room room, Player player) {
+    logger.info("Eliminando jugador desconectado durante la fase {}: {}", room.getStatus(), player.getId());
+    room.removePlayer(player);
+}
+
+private void handleInGameLogic(Room room, Player player) {
+    if (player.getInTurn()) {
+        logger.info("Player was in turn. Passing to next player.");
+        player.setInTurn(false);
+        room.getGame().nextPlayer();
+    }
+}
+
+private void resetRoom(Room room, String roomId) {
+    room.resetRoom();
+    logger.info("{}{} reiniciada y puesta en estado EN_ESPERA.", SALA_PREFIX, roomId);
+}
+
 
 
     
@@ -153,61 +182,85 @@ private DataListener<JoinRoomPayload> joinRoomListener() {
         String playerId = data.getUserId();
         String roomId = data.getRoomId();
 
-        if (playerId == null || roomId == null) {
-            client.sendEvent("error", "Datos insuficientes para unirse a la sala.");
-            return;
-        }
+        if (hasInvalidData(client, playerId, roomId)) return;
 
-        // Verificar si el jugador ya está en la sala
-        Room room = rooms.get(roomId);
-        if (room != null && room.getPlayerById(playerId) != null) {
-            System.out.println("El jugador ya está en la sala, no se puede unir de nuevo.");
-            return;
-        }
+        Room room = getOrCreateRoom(roomId);
+        if (isPlayerAlreadyInRoom(room, playerId)) return;
 
-        // Obtener el jugador desde el servicio de usuarios
         Optional<User> userOptional = userService.getUserById(playerId);
-        if (!userOptional.isPresent()) {
-            client.sendEvent("error", "Usuario no encontrado con ID: " + playerId);
-            return;
-        }
+        if (userNotFound(client, userOptional, playerId)) return;
 
         User user = userOptional.get();
         String playerName = user.getNickName();
 
-        System.out.println("Player: " + playerName + " con ID: " + playerId + " se unió a la sala " + roomId);
+        logger.info("Player: {} con ID: {} se unió a la sala {}", playerName, playerId, roomId);
         client.joinRoom(roomId);
 
-        // Actualizar el mapeo socketToRoomId
         socketToRoomId.put(client.getSessionId().toString(), roomId);
 
-        if (room == null) {
-            room = new Room();
-            room.setId(roomId);
-            rooms.put(roomId, room);
-        }
-
-        if (room.getStatus() == RoomStatus.EN_JUEGO) {
-            client.sendEvent("error", "No puedes unirte. El juego ya ha comenzado.");
-            return;
-        } else if (room.getStatus() == RoomStatus.FINALIZADO) {
-            client.sendEvent("error", "El juego ha finalizado.");
-            return;
-        }
+        if (roomHasInvalidStatus(client, room)) return;
 
         Player player = new Player(user, playerName, roomId, user.getAmount());
+        logger.info("Jugador creado: ID={}, Nombre={}, RoomId={}, Saldo={}", playerId, playerName, roomId, player.getAmount());
 
-        System.out.println("Jugador creado: ID=" + playerId + ", Nombre=" + playerName + ", RoomId=" + roomId + ", Saldo=" + player.getAmount());
-
-        if (room.addPlayer(player)) {
-            sendRoomUpdate(roomId);
-            System.out.println("Enviando actualización de la sala después de que el jugador se una");
-        } else {
-            client.sendEvent("error", "La sala ya está llena o no se puede unir.");
+        if (addPlayerToRoom(client, room, player, roomId)) {
+            logger.info("Enviando actualización de la sala después de que el jugador se una");
         }
     };
 }
 
+private boolean hasInvalidData(SocketIOClient client, String playerId, String roomId) {
+    if (playerId == null || roomId == null) {
+        client.sendEvent(ERROR_PREFIX, "Datos insuficientes para unirse a la sala.");
+        return true;
+    }
+    return false;
+}
+
+private Room getOrCreateRoom(String roomId) {
+    return rooms.computeIfAbsent(roomId, id -> {
+        Room newRoom = new Room();
+        newRoom.setId(id);
+        return newRoom;
+    });
+}
+
+private boolean isPlayerAlreadyInRoom(Room room, String playerId) {
+    if (room != null && room.getPlayerById(playerId) != null) {
+        logger.info("El jugador ya está en la sala, no se puede unir de nuevo.");
+        return true;
+    }
+    return false;
+}
+
+private boolean userNotFound(SocketIOClient client, Optional<User> userOptional, String playerId) {
+    if (!userOptional.isPresent()) {
+        client.sendEvent(ERROR_PREFIX, "Usuario no encontrado con ID: " + playerId);
+        return true;
+    }
+    return false;
+}
+
+private boolean roomHasInvalidStatus(SocketIOClient client, Room room) {
+    if (room.getStatus() == RoomStatus.EN_JUEGO) {
+        client.sendEvent(ERROR_PREFIX, "No puedes unirte. El juego ya ha comenzado.");
+        return true;
+    } else if (room.getStatus() == RoomStatus.FINALIZADO) {
+        client.sendEvent(ERROR_PREFIX, "El juego ha finalizado.");
+        return true;
+    }
+    return false;
+}
+
+private boolean addPlayerToRoom(SocketIOClient client, Room room, Player player, String roomId) {
+    if (room.addPlayer(player)) {
+        sendRoomUpdate(roomId);
+        return true;
+    } else {
+        client.sendEvent(ERROR_PREFIX, "La sala ya está llena o no se puede unir.");
+        return false;
+    }
+}
 
 
 private DataListener<ChatMessage> chatMessageListener() {
@@ -218,7 +271,7 @@ private DataListener<ChatMessage> chatMessageListener() {
         // Verificar que la sala existe
         Room room = rooms.get(roomId);
         if (room == null) {
-            client.sendEvent("error", "La sala no existe.");
+            client.sendEvent(ERROR_PREFIX, "La sala no existe.");
             return;
         }
 
@@ -226,14 +279,14 @@ private DataListener<ChatMessage> chatMessageListener() {
         ChatMessage chatMessage = new ChatMessage(sender, message.getMessage(), roomId);
         server.getRoomOperations(roomId).sendEvent("receiveMessage", chatMessage);
 
-        System.out.println("Mensaje retransmitido en sala " + roomId + " por " + sender + ": " + message.getMessage());
+        logger.info("Mensaje retransmitido en sala {} por {}: {}", roomId, sender, message.getMessage());
     };
 }
 
 
 private DataListener<String> leaveRoomListener() {
     return (client, roomId, ackSender) -> {
-        System.out.println("Client left Blackjack room: " + roomId);
+        logger.info("Client left Blackjack room: {}", roomId);
         client.leaveRoom(roomId); // El cliente abandona la sala.
 
         Room room = rooms.get(roomId); // Obtén la sala del mapa.
@@ -244,16 +297,16 @@ private DataListener<String> leaveRoomListener() {
 
             if (player != null) {
                 room.removePlayer(player); // Remueve al jugador de la sala.
-                System.out.println("Jugador " + playerName + " eliminado de la sala " + roomId);
+                logger.info("Jugador {} eliminado de la sala {}", playerName, roomId);
             }
 
             // Si la sala queda vacía, reiníciala para que esté disponible nuevamente.
             if (room.getPlayers().isEmpty()) {
                 room.resetRoom();
-                System.out.println("Sala " + roomId + " reiniciada y puesta en estado EN_ESPERA.");
+                logger.info("{}{} reiniciada y puesta en estado EN_ESPERA.", SALA_PREFIX, roomId);
             } else if (room.getPlayers().size() < room.getMinPlayers() && room.getStatus() == RoomStatus.EN_JUEGO) {
                 room.setStatus(RoomStatus.FINALIZADO); // Cambiar estado si no hay jugadores suficientes.
-                System.out.println("Sala " + roomId + " marcada como FINALIZADA.");
+                logger.info("{}{} marcada como FINALIZADA.", SALA_PREFIX, roomId);
             }
 
             sendRoomUpdate(roomId); // Notifica a los clientes sobre el cambio en la sala.
@@ -262,42 +315,41 @@ private DataListener<String> leaveRoomListener() {
 }
 
 
-    private DataListener<BetPayload> playerBetListener() {
-        return (client, data, ackSender) -> {
-            String roomId = data.getRoomId();
-            List<String> chipColors = data.getFichas();
+private DataListener<BetPayload> playerBetListener() {
+    return (client, data, ackSender) -> {
+        String roomId = data.getRoomId();
+        List<String> chipColors = data.getFichas();
+        logger.info("Evento playerBet recibido con las fichas: {}", chipColors);
+        logger.info("roomId recibido: {}", roomId);
 
-            System.out.println("Evento playerBet recibido con las fichas: " + chipColors);
-            System.out.println("roomId recibido: " + roomId);
+        Room room = rooms.get(roomId);
+        if (room == null || room.getStatus() != RoomStatus.EN_APUESTAS) {
+            client.sendEvent(BETERROR_PREFIX, "No se puede realizar la apuesta en este momento.");
+            return;
+        }
 
-            String playerId = socketToPlayerId.get(client.getSessionId().toString());
+        String playerId = socketToPlayerId.get(client.getSessionId().toString());
+        Player player = room.getPlayerById(playerId);
+        if (player == null) {
+            client.sendEvent(BETERROR_PREFIX, "Jugador no encontrado en la sala.");
+            return;
+        }
 
-            Room room = rooms.get(roomId);
-            if (room != null && room.getStatus() == RoomStatus.EN_APUESTAS) {
-                Player player = room.getPlayerById(playerId);
-                if (player != null) {
-                    if (player.placeBet(chipColors)) {
-                        player.setHasCompletedBet(true);
-                        System.out.println("Apuesta realizada por " + player.getName() + ": " + player.getBet());
-                        System.out.println("Saldo después de apuesta: " + player.getAmount());
-                        sendRoomUpdate(roomId);
-                        boolean allPlayersCompletedBet = room.getPlayers().stream().allMatch(Player::hasCompletedBet);
-                        if (allPlayersCompletedBet) {
-                            room.endBetting();
-                            sendRoomUpdate(roomId);
-                        }
+        if (player.placeBet(chipColors)) {
+            player.setHasCompletedBet(true);
+            logger.info("Apuesta realizada por {}: {}", player.getName(), player.getBet());
+            sendRoomUpdate(roomId);
 
-                    } else {
-                        client.sendEvent("betError", "Saldo insuficiente o color de ficha no válido para esta apuesta.");
-                    }
-                } else {
-                    client.sendEvent("betError", "Jugador no encontrado en la sala.");
-                }
-            } else {
-                client.sendEvent("betError", "No se puede realizar la apuesta en este momento.");
+            if (room.getPlayers().stream().allMatch(Player::hasCompletedBet)) {
+                room.endBetting();
+                sendRoomUpdate(roomId);
             }
-        };
-    }
+        } else {
+            client.sendEvent(BETERROR_PREFIX, "Saldo insuficiente o color de ficha no válido para esta apuesta.");
+        }
+    };
+}
+
 
     private DataListener<PlayerActionPayload> playerActionListener() {
         return (client, data, ackSender) -> {
@@ -305,7 +357,8 @@ private DataListener<String> leaveRoomListener() {
             String actionType = data.getType();
             String playerId = socketToPlayerId.get(client.getSessionId().toString());
             
-            System.out.println("Acción del jugador recibida: " + actionType + " en la sala " + roomId);
+            logger.info("Acción del jugador recibida: {} en la sala {}", actionType, roomId);
+
 
             Room room = rooms.get(roomId);
             if (room != null && room.getStatus() == RoomStatus.EN_JUEGO) {
@@ -357,9 +410,9 @@ private DataListener<String> leaveRoomListener() {
             try {
                 ObjectMapper objectMapper = new ObjectMapper();
                 String jsonString = objectMapper.writeValueAsString(roomState);
-                System.out.println("JSON enviado a roomUpdate: " + jsonString);
+                logger.debug("JSON enviado a roomUpdate: {}", jsonString);
             } catch (Exception e) {
-                System.err.println("Error al convertir RoomStateDTO a JSON: " + e.getMessage());
+                logger.error("Error al convertir RoomStateDTO a JSON: {}", e.getMessage(), e);
             }
             server.getRoomOperations(roomId).sendEvent("roomUpdate", roomState);
         }
@@ -369,11 +422,12 @@ private DataListener<String> leaveRoomListener() {
     public void sendRoomsUpdate() {
         List<RoomStateDTO> allRoomsState = rooms.values().stream()
                 .map(Room::buildRoomState)
-                .collect(Collectors.toList());
+                .toList(); // Uso de Stream.toList()
     
         server.getBroadcastOperations().sendEvent("roomsUpdate", allRoomsState);
-        System.out.println("Broadcast de salas actualizado: " + allRoomsState);
+        logger.info("Broadcast de salas actualizado: {}", allRoomsState);
     }
+    
     
     public void start() {
         server.start();
